changed the README

--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-THIS IS A TEST
+Report of advancement:
+09-14: creating of individual components for one cycle processor
+16-22: piecing together the individual components to complete the one cycle processor
