--- a/README
+++ b/README
@@ -1,3 +1,8 @@
-** Report of advancement: **
-09-14: creating of individual components for one cycle processor
-16-22: piecing together the individual components to complete the one cycle processor
+# Project Description
+
+Design of 32bits Pipelined processor using VHDL and verification using UVM in System Verilog 
+
+## Report of Advancement:
+
+- 09-14: creating of individual components for one cycle processor
+- 16-22: piecing together the individual components to complete the one cycle processor
